test/files/neg/stmt-expr-discard.check
stmt-expr-discard.scala:5: warning: a pure expression does nothing in statement position; multiline expressions may require enclosing parentheses
    + 2
    ^
stmt-expr-discard.scala:6: warning: a pure expression does nothing in statement position; multiline expressions may require enclosing parentheses
    - 4
    ^
error: No warnings can be incurred under -Werror.
2 warnings
1 error
